--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sourcequery",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "description": "A Source Server Query protocol implementation for node.js",
     "keywords": ["srcds","source","query"],
     "homepage": "https://github.com/flamescape/SourceQuery/",
@@ -15,6 +15,6 @@
         "url": "https://github.com/flamescape/SourceQuery.git"
     },
     "dependencies": {
-        "bufferpack": "0.0.6"
+        "smart-buffer": "1.0.x"
     }
 }
